--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h3>Ed Maverick</h3>
+    <img src="https://i.pinimg.com/564x/51/27/d2/5127d2355f5be5e99b7ad0ea5de1e89b.jpg
+    " alt="">
 </body>
 </html>
