--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h3>Ed Maverick</h3>
     <img src="https://i.pinimg.com/564x/51/27/d2/5127d2355f5be5e99b7ad0ea5de1e89b.jpg
     " alt="">
+    <div>Ed Maverick, nacido Eduardo Hernández Saucedo el 18 de enero de 2000 en Ciudad Juárez, es un cantante y compositor mexicano que ha capturado la atención con su estilo único que mezcla música regional mexicana y folk. Su debut con el álbum Mi Primera Oportunidad en 2018 le dio notoriedad por sus letras emotivas y su producción sencilla, resonando especialmente en plataformas digitales y redes sociales. Con una voz distintiva y un enfoque auténtico en su música, Maverick ha logrado conectar profundamente con una audiencia joven y creciente.
+    </div>
 </body>
 </html>
