--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     " alt="">
     <div>Ed Maverick, nacido Eduardo Hernández Saucedo el 18 de enero de 2000 en Ciudad Juárez, es un cantante y compositor mexicano que ha capturado la atención con su estilo único que mezcla música regional mexicana y folk. Su debut con el álbum Mi Primera Oportunidad en 2018 le dio notoriedad por sus letras emotivas y su producción sencilla, resonando especialmente en plataformas digitales y redes sociales. Con una voz distintiva y un enfoque auténtico en su música, Maverick ha logrado conectar profundamente con una audiencia joven y creciente.
     </div>
+    <h4>ED MAVERICK: Eduardo</h4>
 </body>
 </html>
