--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     </div>
     <h4>ED MAVERICK: Eduardo</h4>
     <img src="https://www.lahiguera.net/musicalia/artistas/ed_maverick/disco/11231/ed_maverick_eduardo-portada.jpg" alt="">
+
+    <h3>Mon Laferte</h3>
 </body>
 </html>
