--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <img src="https://www.lahiguera.net/musicalia/artistas/ed_maverick/disco/11231/ed_maverick_eduardo-portada.jpg" alt="">
 
     <h3>Mon Laferte</h3>
+    <img src="https://i.pinimg.com/564x/2b/a7/31/2ba73182d520ebf1aa0a77447922bffd.jpg
+    " alt="">
 </body>
 </html>
