--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     " alt="">
     <div>Mon Laferte, nacida Norma Monserrat Bustamante Laferte el 2 de mayo de 1983 en Viña del Mar, Chile, es una destacada cantante y compositora conocida por su versatilidad musical y su poderosa voz. Comenzó su carrera en la música en Chile antes de mudarse a México, donde consolidó su fama con álbumes como Tremo (2015) y La Trenza (2018). Su estilo fusiona géneros como el pop, el rock, el bolero y la música latina, y sus letras suelen explorar temas de amor, desamor y empoderamiento. Mon Laferte ha ganado varios premios y reconocimientos a lo largo de su carrera, convirtiéndose en una figura influyente en la música latinoamericana.
     </div>
+    <h4>MON LAFERTE: La Trenza</h4>
 </body>
 </html>
