--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
     <div>es el músico detrás de Depresión Sonora, un proyecto en solitario que lanzó en 2020. Originario de Madrid, España, Crespo comenzó este proyecto en plena pandemia, utilizando su talento para crear música introspectiva y emocional que explora temas como la soledad, la ansiedad y la desesperanza, especialmente en el contexto de la vida moderna.
         Antes de Depresión Sonora, Crespo ya había estado involucrado en la música, pero fue con este proyecto que logró conectar con una audiencia más amplia. Su estilo mezcla géneros como el post-punk, lo-fi y el synthwave, y sus letras a menudo abordan el malestar existencial que muchos jóvenes sienten en la actualidad.
         </div>
+    <h4>Depresión Sonora</h4>
 </body>
 </html>
