--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         Antes de Depresión Sonora, Crespo ya había estado involucrado en la música, pero fue con este proyecto que logró conectar con una audiencia más amplia. Su estilo mezcla géneros como el post-punk, lo-fi y el synthwave, y sus letras a menudo abordan el malestar existencial que muchos jóvenes sienten en la actualidad.
         </div>
     <h4>Depresión Sonora</h4>
-    <img src="https://cdns-images.dzcdn.net/images/cover/36ad07d13305a1189818606e3f05fb61/1900x1900-000000-80-0-0.jpg" alt="">
+    <img src="https://i.pinimg.com/564x/b1/5b/3d/b15b3db7efdafe54bfb899f576cd0f0d.jpg" alt="">
+
+    <h3>Ashnikko</h3>
 </body>
 </html>
