--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
     <img src="https://i.pinimg.com/564x/b1/5b/3d/b15b3db7efdafe54bfb899f576cd0f0d.jpg" alt="">
 
     <h3>Ashnikko</h3>
+    <img src="https://i.pinimg.com/564x/e0/2c/9f/e02c9f796edc6e439897a85755b39a60.jpg
+    " alt="">
 </body>
 </html>
