--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
     <h3>Ashnikko</h3>
     <img src="https://i.pinimg.com/564x/e0/2c/9f/e02c9f796edc6e439897a85755b39a60.jpg
     " alt="">
+    <div>Ashnikko (Ashton Nicole Casey) es una rapera y cantante estadounidense nacida en 1996. Conocida por su estilo que mezcla hip hop, pop alternativo y punk, alcanzó fama con su sencillo viral "Stupid" en 2019. Su música aborda temas de empoderamiento femenino y sexualidad, destacándose también por su estética excéntrica y mensaje feminista. Su mixtape Demidevil (2021) consolidó su lugar en la escena musical con éxitos como "Daisy" y colaboraciones con Grimes.
+    </div>
 </body>
 </html>
