--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
     <div>Ashnikko (Ashton Nicole Casey) es una rapera y cantante estadounidense nacida en 1996. Conocida por su estilo que mezcla hip hop, pop alternativo y punk, alcanzó fama con su sencillo viral "Stupid" en 2019. Su música aborda temas de empoderamiento femenino y sexualidad, destacándose también por su estética excéntrica y mensaje feminista. Su mixtape Demidevil (2021) consolidó su lugar en la escena musical con éxitos como "Daisy" y colaboraciones con Grimes.
     </div>
     <h4>DEMIDEVIL</h4>
+    <img src="https://upload.wikimedia.org/wikipedia/en/5/52/Ashnikko_-_Demidevil.png" alt="">
 </body>
 </html>
