--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
     <img src="https://upload.wikimedia.org/wikipedia/en/5/52/Ashnikko_-_Demidevil.png" alt="">
 
     <h3>Grimes</h3>
+    <img src="" alt="">
 </body>
 </html>
