--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     <img src="https://upload.wikimedia.org/wikipedia/en/5/52/Ashnikko_-_Demidevil.png" alt="">
 
     <h3>Grimes</h3>
-    <img src="" alt="">
+    <img src="https://i.pinimg.com/564x/b7/d5/4f/b7d54ff94fd44094b1dfedd317499f3e.jpg
+    " alt="">
+    <div>Grimes (Claire Boucher) es una cantante, productora y artista visual canadiense, nacida el 17 de marzo de 1988. Conocida por su estilo experimental que fusiona pop, electrónica y elementos de varios géneros, Grimes ha ganado notoriedad por su capacidad para crear música innovadora y futurista. Su álbum Visions (2012) la catapultó a la fama con sencillos como "Oblivion" y "Genesis". A lo largo de su carrera, ha mantenido una estética única y un enfoque DIY, abordando temas de tecnología, ciencia ficción y feminismo en su arte, lo que la ha convertido en un ícono del pop alternativo.
+    </div>
 </body>
 </html>
