--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     " alt="">
     <div>Grimes (Claire Boucher) es una cantante, productora y artista visual canadiense, nacida el 17 de marzo de 1988. Conocida por su estilo experimental que fusiona pop, electrónica y elementos de varios géneros, Grimes ha ganado notoriedad por su capacidad para crear música innovadora y futurista. Su álbum Visions (2012) la catapultó a la fama con sencillos como "Oblivion" y "Genesis". A lo largo de su carrera, ha mantenido una estética única y un enfoque DIY, abordando temas de tecnología, ciencia ficción y feminismo en su arte, lo que la ha convertido en un ícono del pop alternativo.
     </div>
-    <h4>ARTANGELES</h4>
+    <h4>ART ANGELS</h4>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzICfIzcoPbyj9axC8QJXXue5D-zyPRsMKE7KWYpsRZKqb0UNHE6FbtwPYZwsuHHLBpJ4&usqp=CAU" alt="">
 </body>
 </html>
